<resources>
    <string name="app_name">Health Plus</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_safety">Safety Tips</string>
    <string name="tab_text_profile">My Profile</string>
    <string name="tab_text_home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_link_to_register">New user? Sign Up</string>
    <string name="btn_link_to_sign_in">Already a user? Sign In</string>
    <string name="action_sign_up">Sign Up </string>
    <string name="action_logout">Logout</string>
    <string name="tab_text_covid_stats">COVID stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="title_activity_near_by_test_center">Map</string>
    <string name="choose">Choose..</string>
    <string name="submit_report">Submit and Notify</string>
    <string name="upload">Upload</string>
    <string name="path">path..</string>
    <string name="date">Date:</string>
    <string name="test_centre">Test Centre:</string>
    <string name="enter_test_centre_name">Enter Test Centre Name</string>
    <string name="report_file">Report File:</string>
    <string name="report_result">Report Result:</string>
    <string name="view_testing_centres">View testing centres</string>
    <string name="click_to_submit_a_new_test_report">Click to submit a new test report</string>


</resources>
