<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.AddReportActivity">



    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:text="@string/report_result"
        android:textAlignment="inherit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvReportFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:text="@string/report_file"
        android:textAlignment="inherit"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCentreName"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_test_centre_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCentreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:text="@string/test_centre"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDateTitle"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/date"
        android:textAlignment="inherit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDateSelect"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/tvDateTitle"
        android:ems="10"
        android:gravity="center"
        android:hint="Select Date"
        android:inputType="date"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/test_result"
        android:layout_width="225dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/tvResult"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="57dp"
        android:layout_toEndOf="@+id/tvReportFile"
        android:text="@string/choose"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="158dp"
        android:text="@string/submit_report" />

    <TextView
        android:id="@+id/tvFilePath"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChooseFile"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="302dp"
        android:text="@string/path" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="236dp"
        android:text="@string/upload" />

</RelativeLayout>